# self-evolution-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
nexus_evolution/: __init__.py  __main__.py  cli.py
nexus_evolution/core/: __init__.py  evaluator.py  gap_detector.py  optimizer.py
nexus_evolution/modules/: __init__.py  evolution_trigger.py  feedback_loop.py  skill_library.py
nexus_evolution/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_evaluator.py  test_gap_detector.py  test_modules.py  test_optimizer.py
