[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-evolution-pipeline"
version = "1.0.0"
description = "Autonomous skill improvement pipeline using DSPy + GEPA for programmatic prompt optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "NEXUS", email = "dev@nexus-system.io"},
]
keywords = ["ai", "prompt-engineering", "dspy", "gepa", "autonomous", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy>=2.4.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
nexus-evolve = "nexus_evolution.cli:main"

[project.urls]
Homepage = "https://github.com/skappafrost/self-evolution-pipeline"
Repository = "https://github.com/skappafrost/self-evolution-pipeline.git"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
